--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="header">
         <header class="header-content">
             <a href="#logo" class="logo">
-                <img src="./images/StudySyn.svg" alt="logoImage" class="logo-icon">
+                <img src="StudySyn.svg" alt="logoImage" class="logo-icon">
                 <span class="logo-text">StudySync</span>
             </a>
 
@@ -29,7 +29,7 @@
             </a>
 
             <button class="menu-button">
-                <img src="./images/Hamburger.svg" alt="menubutton" class="menu-icon">
+                <img src="Hamburger.svg" alt="menubutton" class="menu-icon">
             </button>
 
         </header>
@@ -52,7 +52,7 @@
 
             <div class="content-right">
                 <div class="image-container">
-                    <img src="./images/usgs-hoS3dzgpHzw-unsplash.jpg" alt="SectioImage" class="Section-Image">
+                    <img src="usgs-hoS3dzgpHzw-unsplash.jpg" alt="SectioImage" class="Section-Image">
                 </div>
             </div>
 
@@ -63,22 +63,22 @@
         <h2 class="company-title">Trusted by the best</h2>
         <div class="company-grid">
             <div class="company-logo">
-                <img src="./images/Google.svg" alt="Error" class="svg-img">
+                <img src="Google.svg" alt="Error" class="svg-img">
                 <span class="logo-txt">Google</span>
             </div>
 
             <div class="company-logo">
-                <img src="./images/Microsoft.svg" alt="Error" class="svg-img">
+                <img src="Microsoft.svg" alt="Error" class="svg-img">
                 <span class="logo-txt">Microsoft</span>
             </div>
 
             <div class="company-logo">
-                <img src="./images/linkedin.svg" alt="Error" class="svg-img">
+                <img src="linkedin.svg" alt="Error" class="svg-img">
                 <span class="logo-txt">Linkedin</span>
             </div>
 
             <div class="company-logo">
-                <img src="./images/VectorEdu.svg" alt="Error" class="svg-img">
+                <img src="VectorEdu.svg" alt="Error" class="svg-img">
                 <span class="logo-txt">VectorEdu</span>
             </div>
         </div>
@@ -95,7 +95,7 @@
                 <!-- card 1 -->
                 <div class="feature-card">
                     <div class="icon-container">
-                        <img src="./images/PersonalizedLearn.svg" alt="Error" class="feature-svg">
+                        <img src="PersonalizedLearn.svg" alt="Error" class="feature-svg">
                     </div>
                     <div class="feature-info">
                         <div class="feature-title">
@@ -110,7 +110,7 @@
                 <!-- card 2 -->
                 <div class="feature-card">
                     <div class="icon-container">
-                        <img src="./images/Affordability.svg" alt="Error" class="feature-svg">
+                        <img src="Affordability.svg" alt="Error" class="feature-svg">
                     </div>
                     <div class="feature-info">
                         <div class="feature-title">
@@ -126,7 +126,7 @@
                 <!-- card 3 -->
                 <div class="feature-card">
                     <div class="icon-container">
-                        <img src="./images/IndustryPatner.svg" alt="Error" class="feature-svg">
+                        <img src="IndustryPatner.svg" alt="Error" class="feature-svg">
                     </div>
                     <div class="feature-info">
                         <div class="feature-title">
@@ -142,7 +142,7 @@
                 <!-- card 4 -->
                 <div class="feature-card">
                     <div class="icon-container">
-                        <img src="./images/InnovativeTech.svg" alt="Error" class="feature-svg">
+                        <img src="InnovativeTech.svg" alt="Error" class="feature-svg">
                     </div>
                     <div class="feature-info">
                         <div class="feature-title">
@@ -158,7 +158,7 @@
                 <!-- card 5 -->
                 <div class="feature-card">
                     <div class="icon-container">
-                        <img src="./images/IndustryPatner.svg" alt="Error" class="feature-svg">
+                        <img src="IndustryPatner.svg" alt="Error" class="feature-svg">
                     </div>
                     <div class="feature-info">
                         <div class="feature-title">
@@ -172,7 +172,7 @@
                 <!-- card 6 -->
                 <div class="feature-card">
                     <div class="icon-container">
-                        <img src="./images/Analytics.svg" alt="Error" class="feature-svg">
+                        <img src="Analytics.svg" alt="Error" class="feature-svg">
                     </div>
                     <div class="feature-info">
                         <div class="feature-title">
@@ -198,7 +198,7 @@
                         enjoyable.Highly recommended.”
                     </div>
                     <div class="testimonial-avatar">
-                        <img src="./images/avatar1.png" alt="Error" class="">
+                        <img src="avatar1.png" alt="Error" class="">
 
                     </div>
                     <div class="testimonial-details">
@@ -214,7 +214,7 @@
                         features are invaluable for parents. ”
                     </div>
                     <div class="testimonial-avatar">
-                        <img src="./images/avatar2.png" alt="Error" class="">
+                        <img src="avatar2.png" alt="Error" class="">
 
                     </div>
                     <div class="testimonial-details">
@@ -231,7 +231,7 @@
                         Intregal to our school district's success.”
                     </div>
                     <div class="testimonial-avatar">
-                        <img src="./images/avatar3.png" alt="Error" class="">
+                        <img src="avatar3.png" alt="Error" class="">
 
                     </div>
                     <div class="testimonial-details">
@@ -248,7 +248,7 @@
         <div class="newsletter-content">
             <!-- left part -->
             <div class="news-left">
-                <img src="./images/img.png" alt="Error" loading="lazy">
+                <img src="img.png" alt="Error" loading="lazy">
 
             </div>
             <!-- right part -->
@@ -289,23 +289,23 @@
 
                 <div class="comp-logo">
                     <a class="logo-link" href="#">
-                        <img class="logo-svg" src="./images/StudySyn.svg" />
+                        <img class="logo-svg" src="StudySyn.svg" />
                         StudySync
                     </a>
                 </div>
                 <p class="filler-text">Seamless Learning for Brighter Futures.</p>
                 <div class="social">
                     <a class="social-link" href="#">
-                        <img src="./images/instagram.svg" class="social-icon" />
+                        <img src="instagram.svg" class="social-icon" />
                     </a>
                     <a class="social-link">
-                        <img src="./images/linkedin.svg" class="social-icon" />
+                        <img src="linkedin.svg" class="social-icon" />
                     </a>
                     <a class="social-link">
-                        <img src="./images/Microsoft.svg" class="social-icon" />
+                        <img src="Microsoft.svg" class="social-icon" />
                     </a>
                     <a class="social-link">
-                        <img src="./images/twitter.svg" class="social-icon" />
+                        <img src="twitter.svg" class="social-icon" />
                     </a>
                 </div>
             </div>
